Connects studying field sample to more science
r4772
2019-01-17

## CHANGE
1. Add astronomy, meteorology, physics to getFieldSciences() in
   StudyFieldSample.
2. Minor code cleanup in numerous class.