@@ -13,8 +13,7 @@ import org.mars_sim.msp.core.person.Person;
 /**
  * An abstract class representing a medication a person has taken.
  */
-public abstract class Medication
-implements Serializable, Comparable<Medication> {
+public abstract class Medication implements Serializable, Comparable<Medication> {
 
 	/** default serial id. */
 	private static final long serialVersionUID = 1L;
@@ -22,17 +21,16 @@ implements Serializable, Comparable<Medication> {
 	// Data members.
 	private double duration;
 	private double timeElapsed;
-	
-	private String name;
-	
-	private Person person;
 
+	private String name;
+	private Person person;
 
 	/**
 	 * Constructor.
-	 * @param name the name of the medication.
+	 * 
+	 * @param name     the name of the medication.
 	 * @param duration the time duration (millisols).
-	 * @param person the person to be medicated.
+	 * @param person   the person to be medicated.
 	 */
 	public Medication(String name, double duration, Person person) {
 		this.name = name;
@@ -43,6 +41,7 @@ implements Serializable, Comparable<Medication> {
 
 	/**
 	 * Gets the name of the medication.
+	 * 
 	 * @return name.
 	 */
 	public String getName() {
@@ -51,6 +50,7 @@ implements Serializable, Comparable<Medication> {
 
 	/**
 	 * Gets the time duration of the medication.
+	 * 
 	 * @return duration (millisols).
 	 */
 	public double getDuration() {
@@ -59,6 +59,7 @@ implements Serializable, Comparable<Medication> {
 
 	/**
 	 * Gets the person taking the medication.
+	 * 
 	 * @return person.
 	 */
 	public Person getPerson() {
@@ -67,6 +68,7 @@ implements Serializable, Comparable<Medication> {
 
 	/**
 	 * Gets the time elapsed since medication was taken.
+	 * 
 	 * @return time (millisols).
 	 */
 	public double getTimeElapsed() {
@@ -74,8 +76,9 @@ implements Serializable, Comparable<Medication> {
 	}
 
 	/**
-	 * Update the medication based on passing time.
-	 * Child classes should override for other medical effects.
+	 * Update the medication based on passing time. Child classes should override
+	 * for other medical effects.
+	 * 
 	 * @param time amount of time (millisols).
 	 */
 	public void timePassing(double time) {
@@ -86,6 +89,7 @@ implements Serializable, Comparable<Medication> {
 
 	/**
 	 * Is the person under the influence of this medication?
+	 * 
 	 * @return true if medicated.
 	 */
 	public boolean isMedicated() {
@@ -97,12 +101,16 @@ implements Serializable, Comparable<Medication> {
 		boolean result = true;
 		if (object instanceof Medication) {
 			Medication med = (Medication) object;
-			if (!name.equals(med.name)) result = false;
-			if (duration != med.duration) result = false;
-			if (timeElapsed != med.timeElapsed) result = false;
-			if (!person.equals(med.person)) result = false;
-		}
-		else result = false;
+			if (!name.equals(med.name))
+				result = false;
+			if (duration != med.duration)
+				result = false;
+			if (timeElapsed != med.timeElapsed)
+				result = false;
+			if (!person.equals(med.person))
+				result = false;
+		} else
+			result = false;
 
 		return result;
 	}
@@ -110,17 +118,18 @@ implements Serializable, Comparable<Medication> {
 	@Override
 	public int hashCode() {
 		int hashCode = name.hashCode();
-		hashCode *= new Double(duration).hashCode();
-		hashCode *= new Double(timeElapsed).hashCode();
+		hashCode *= Double.valueOf(duration).hashCode();
+		hashCode *= Double.valueOf(timeElapsed).hashCode();
 		hashCode *= person.hashCode();
 		return hashCode;
 	}
 
 	/**
 	 * Compares this object with the specified object for order.
+	 * 
 	 * @param o the Object to be compared.
-	 * @return a negative integer, zero, or a positive integer as this object is less than, 
-	 * equal to, or greater than the specified object.
+	 * @return a negative integer, zero, or a positive integer as this object is
+	 *         less than, equal to, or greater than the specified object.
 	 */
 	public int compareTo(Medication o) {
 		return name.compareTo(o.name);
